packages/flow-type-tests/__tests__/fixtures/fixture-exact-props.0.110.0.txt
Error -------------------------------------------------- packages/flow-type-tests/__tests__/fixtures/exact-props.js:15:1

Cannot create `MyStyledComponent` element because property `invalidProp` is missing in object type [1] but exists in
props [2].

   packages/flow-type-tests/__tests__/fixtures/exact-props.js:15:1
   15| <MyStyledComponent foo={42} invalidProp={42} />; // Should fail, not in props
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   packages/styletron-react/src/types.js:58:31
   58|   ): StyletronComponent<$Diff<ElementConfig<Base>, {className: any}>>,
                                     ^^^^^^^^^^^^^^^^^^^ [1]



Found 1 error

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
